enhanced unit lookup and update of annotation bodys, updated api documentation
